# deeplazy

./: .gitignore  README.md  SECURITY_FIX_PLAN.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_QUICK_REFERENCE.md  SECURITY_README.md  pyproject.toml  security_check.sh  test_output.json
.opencode/plans/: 2026-03-11-batch-workflow.md  2026-03-12-batch-slurm-support.md  2026-03-13-openmx-hamiltonian-component-output.md  2026-03-14-openmx-get-data-ext-analysis.md  unified_fix_plan.md
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: sigma-flow-analysis.md  sigma-flow-v2-plan.md
.sisyphus/plans/: al-calc-improvements.md  analyze-hcomponent.md  enhancement-lazy-batch-creation.md  fix-batch-mode-noninteractive.md  fix-batch-size-persistence.md  fix-initialized-flag.md  sigma-flow-cleanup.md  workflow-optimization-v3.md
deeplazy/: __init__.py  __main__.py  batch_workflow.py  cli.py  commands.py  constants.py  contexts.py  exceptions.py  executor.py  monitor.py  template_generator.py  utils.py  workflow.py
dlazy/: __init__.py  __main__.py  _runner.py  batch_workflow.py  cli.py  commands.py  config.py  constants.py  contexts.py  engine.py  error_handler.py  exceptions.py  executor.py  exporter.py  generator.py  path_resolver.py  record_utils.py  template_generator.py  template_loader.py  utils.py  workflow.py  workflow_base.py
dlazy/core/: __init__.py  exceptions.py  tasks.py  workflow_state.py
dlazy/execution/: __init__.py  base.py  calc_executor.py  factory.py  infer_executor.py  olp_executor.py
dlazy/executor/: __init__.py
dlazy/scheduler/: __init__.py  (+3 more)
docs/: OPTIMIZATION_SUMMARY.md  integration_guide.py  performance_optimization_plan.md
examples/: machine.json  param.json
tests/: conftest.py  test_base_classes.py  test_batch_scheduler.py  test_checkpoint.py  test_checksum.py  test_cli.py  test_config.py  test_engine.py  test_env_passing.py  test_error_recovery.py  test_executors.py  test_file_lock.py  test_hdf5_validator.py  test_job_manager.py  test_monitor.py  test_path_resolver.py  test_performance_optimization.py  test_progress.py  test_record_utils.py  test_recovery_strategies.py  test_resource_manager.py  test_scf_validator.py  test_security.py  test_serializer.py  test_slurm_scheduler.py  test_steps.py  test_template_integration.py  test_utils.py  test_validator_registry.py  test_workflow_integration.py
(+46 files in other folders)
