[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dlazy"
version = "0.1.0"
description = "Minimal workflow orchestrator for DeepH co-optimization"
requires-python = ">=3.8"
dependencies = [
    "dpdispatcher>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "h5py>=3.7",
]

[project.scripts]
dlazy = "dlazy.__main__:main"

[tool.setuptools.packages.find]
include = ["dlazy*"]
