[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dlazy"
version = "0.1.0"
description = "Minimal workflow orchestrator for DeepH co-optimization"
requires-python = ">=3.8"
dependencies = [
    "dpdispatcher>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "h5py>=3.7",
    "jinja2>=3.0",
    "pymatgen>=2022.0",
]

[project.scripts]
dlazy = "dlazy.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["dlazy*"]

[tool.setuptools.package-data]
dlazy = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
